--- a/!JavaScript/pr8.3/index.html
+++ b/!JavaScript/pr8.3/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Практика 6.6</title>
+    <title>Практика 4</title>
 </head>
 <body>
+    <div class="teacher"></div>
+
+
+
+
+
+
+
     <script src="./src/script.js"></script>
 </body>
 </html>
