--- a/!JavaScript/pr8.5/index.html
+++ b/!JavaScript/pr8.5/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Практика 6.6</title>
+    <title>Практика 8.5</title>
 </head>
 <body>
-    <script src="./src/script.js"></script>
+    <div class="teacher"></div>
+
+
+    <script src="./src/scripr.js"></script>
 </body>
 </html>
